--- a/albumy/templates/main/index.html
+++ b/albumy/templates/main/index.html
@@ -30,7 +30,8 @@
                                 <a class="thumbnail" href="{{ url_for('.show_photo', photo_id=photo.id) }}"
                                    target="_blank">
                                     <img class="img-fluid"
-                                         src="{{ url_for('.get_image', filename=photo.filename_m) }}">
+                                         src="{{ url_for('.get_image', filename=photo.filename_m) }}" 
+                                         alt="{% if photo.description %}{{ photo.description }}{% elif photo.tags %}{% for tag in photo.tags %}{{ tag.name }}{% if not loop.last %}, {% endif %}{% endfor %}{% else %}No description{% endif %}">
                                 </a>
                             </div>
                         </div>
