--- a/albumy/templates/main/photo.html
+++ b/albumy/templates/main/photo.html
@@ -9,7 +9,8 @@
         <div class="col-md-8">
             <div class="photo">
                 <a href="{{ url_for('.get_image', filename=photo.filename) }}" target="_blank">
-                    <img class="img-fluid" src="{{ url_for('.get_image', filename=photo.filename_m) }}">
+                    <img class="img-fluid" src="{{ url_for('.get_image', filename=photo.filename_m) }}"
+                    alt="{% if photo.description %}{{ photo.description }}{% elif photo.tags %}{% for tag in photo.tags %}{{ tag.name }}{% if not loop.last %}, {% endif %}{% endfor %}{% else %}No description{% endif %}">
                 </a>
             </div>
             <a class="btn btn-primary btn-sm text-white" data-toggle="modal" data-target="#share-modal">Share</a>
